till donate now complete

--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
     <link rel="icon" href="./images/pngtree-blood-drop-image-png-image_17661924.png">
     <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
-    
+<body class="inter-font">
+    <header class="header display-flex ">
+        <!-- <div class="header-content"> -->
+            <h1 class="header-title">Let’s Help Those Who Are More In Need</h1>
+            <p class="header-description description poppins-font">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <button class="btn-primary">Donate Now!</button>
+        <!-- </div> -->
+    </header>
+    <main>
+        <section class="donate">
+            <h2 class="donate-title">Donate Today</h2>
+            <p class="donate-description description poppins-font">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="card-container display-flex">
+                <div class="card">
+                    <p>100tk</p>
+                </div>
+                <div class="card card-donate">
+                    <p>200tk</p>
+                </div>
+                <div class="card">
+                    <p>500tk</p>
+                </div>
+                <div class="card">
+                    <p>1000tk</p>
+                </div>
+                <div class="card">
+                    <p>5000tk</p>
+                </div>
+            </div>
+            <p class="other-amount description poppins-font">Other amount</p>
+            <hr>
+            <button class="nd-btn btn-primary">Donate Now</button>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
