end without responsive

--- a/index.html
+++ b/index.html
@@ -40,9 +40,72 @@
             <hr>
             <button class="nd-btn btn-primary">Donate Now</button>
         </section>
+        <section class="donate-plan">
+            <!-- <div class="our-donate-plan"> -->
+                    <h2 class="donate-title">Our Donate Plan</h2>
+                    <p class="plan-description description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam saepe asperiores aliquid exercitationem laboriosam, officiis aut nisi sint enim impedit, eveniet vitae iure iste maiores voluptatibus incidunt modi perspiciatis alias.
+                    </p>
+            <!-- </div> -->
+            <div class="plan-card-container">
+                <div class="plan-card">
+                    <img class="card-pinture" src="./icons/food.png" alt="">
+                    <h3 class="plan-card-title poppins-font">Food for a family</h3>
+                    <p class="card-description description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="plan-card plan-card-2">
+                    <img class="card-pinture" src="./icons/food.png" alt="">
+                    <h3 class="plan-card-title poppins-font">Shelter for a family</h3>
+                    <p class="card-description description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="plan-card plan-card-3">
+                    <img class="card-pinture" src="./icons/Frame-1.png" alt="">
+                    <h3 class="plan-card-title poppins-font">Education for a child</h3>
+                    <p class="card-description description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+        </section>
+        <section class="donation">
+            <div class="donation-grid">
+                <div class="donation-container">
+                    <h1 class="titlee donate-title">Their lives depend on your donation</h1>
+                    <p class="poppins-font description donation-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="poppins-font description donation-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                    <button class="donation-button btn-primary">How to Contribute?</button>
+                </div>
+                <div class="donation-photo">
+                    <img class="photo" src="./images/donation10.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="donation">
+            <div class="donation-grid">
+                <div class="donation-photo">
+                    <img class="photo" src="./images/donation9.jpg" alt="">
+                </div>
+                <div class="donation-container">
+                    <h1 class="titlee donate-title">They need us to suvive</h1>
+                    <p class="poppins-font description donation-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="poppins-font description donation-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                    <button class="donation-button btn-primary">How to Contribute?</button>
+                </div>
+            </div>
+        </section>
+        <section class="updates-section">
+        <div class="updates">
+            <h2 class="donate-title">Get My Updates</h2>
+            <p class="update-description description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="info-box">
+            <input class="update-mail" type="email" placeholder="Email"> <button class="Subscribe btn-primary"> Subscribe</button>
+        </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-title">
+            <p class="">Be Humble</p>
+            <p class="poppins-font footer-description">I’m gonna do it</p>
+        </div>
     </footer>
+
 </body>
 </html>
