--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
             <h2 class="donate-title">Get My Updates</h2>
             <p class="update-description description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
         </div>
-        <div class="info-box">
+        <div class="info-parent">
+            <div class="info-box">
             <input class="update-mail" type="email" placeholder="Email"> <button class="Subscribe btn-primary"> Subscribe</button>
+            </div>
         </div>
         </section>
     </main>
